added the landing page to the quiz

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = "coding-quiz">
+    <div class="coding-quiz-content">
+    <h1>Coding Quiz</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    Esse, ullam placeat veritatis numquam ut rem temporibus hic quasi in qui facilis eos amet, neque consequuntur deserunt.
+    Explicabo eaque laborum dicta.  
+    </p>
+    <button>Start Quiz!</button>
+    </div>
+    </div>
 
+    <div class="highscores">
+        <h3>High Scores</h3>
+    </div>
+
+    <div class="timer">
+        <h4>Time left:</h4>
+    </div>
+
+
+    
 
 
     <script src="assets/js/script.js"></script>
