fixed landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Quiz Time!</h1>
-            <a href="/quiz.html" class="btn">Take Quiz</a>
+            <a href="quiz.html" class="btn">Take Quiz</a>
             <a href="highscores.html" class="btn" id="highscores-btn">HighScores</a>
         </div>
     </div>
