--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,7 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id='highScoreList'>
-                <a href="/" class="btn">Go Home</a>
+                <a href="index.html" class="btn">Go Home</a>
             </ul>
         </div>
     </div>
